bridge/base/stripe-checkout-service.yaml
# check if there is at least one published port

#! stripe-checkout-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: stripe-checkout-published
    namespace: stripe-smart-checkout
    labels:
        com.docker.compose.project: stripe-smart-checkout
        com.docker.compose.service: stripe-checkout
spec:
    selector:
        com.docker.compose.project: stripe-smart-checkout
        com.docker.compose.service: stripe-checkout
    ports:
        - name: stripe-che-3000
          port: 3000
          protocol: TCP
          targetPort: stripe-che-3000
